Fix alignment issue

--- a/src/app/readings-chart/readings-chart.component.css
+++ b/src/app/readings-chart/readings-chart.component.css
@@ -61,7 +61,7 @@ i
 {
 	position: absolute;
 	left: -125px;
-	top: 110px;
+	top: 90px;
 }
 
 #weekdays li
